<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_add_favorite"
        android:title="@string/action_add_favorite"
        android:icon="@drawable/ic_star_border"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_remove_favorite"
        android:title="@string/action_remove_favorite"
        android:icon="@drawable/ic_star"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_edit_favorite"
        android:title="@string/action_edit_favorite"
        android:icon="@drawable/ic_edit"
        android:visible="false"
        app:showAsAction="ifRoom" />
</menu>