<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_radar"
            android:icon="@drawable/radar_icon"
            android:title="@string/nav_radar" />

        <item
            android:id="@+id/nav_nws"
            android:icon="@drawable/image_icon"
            android:title="@string/nav_select" />

        <item
            android:id="@+id/nav_mosaic"
            android:icon="@drawable/mosaic_icon"
            android:title="@string/nav_mosaic" />

        <item
            android:id="@+id/nav_favorites"
            android:title="@string/nav_favorites"
            android:titleCondensed="@string/nav_favorites">
            <menu />
        </item>
    </group>
</menu>