<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?android:attr/actionBarSize"
    tools:context="com.danhasting.radar.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mosaic_text"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_marginTop="30dp" />

        <Spinner
            android:id="@+id/mosaicSpinner"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp" />

        <Switch
            android:id="@+id/loopSwitch"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:text="@string/loop"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_marginTop="30dp" />

        <Button
            android:id="@+id/viewButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_mosaic_image"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:onClick="viewMosaic" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>