<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mosaic_text"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:layout_marginTop="30dp" />

            <Spinner
                android:id="@+id/mosaicSpinner"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp" />

            <Switch
                android:id="@+id/loopSwitch"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:text="@string/loop"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:layout_marginTop="30dp"
                android:theme="@style/controlTheme" />

            <Button
                android:id="@+id/viewButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_mosaic_image"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                style="@style/buttonTheme" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>