<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?android:attr/actionBarSize"
    tools:context="com.danhasting.radar.MainActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/needKeyView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/need_key_text" />

            <Button
                android:id="@+id/needKeyButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/need_key_button"
                style="@style/buttonTheme" />

            <Button
                android:id="@+id/openSettingsButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/open_settings_button" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>