<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            style="@style/layout_max_width"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/location_text" />

            <Spinner
                android:id="@+id/locationSpinner"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp" />

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="30dp"-->
<!--                android:paddingLeft="30dp"-->
<!--                android:paddingRight="30dp"-->
<!--                android:text="@string/type_text" />-->

<!--            <Spinner-->
<!--                android:id="@+id/typeSpinner"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="41dp"-->
<!--                android:paddingLeft="30dp"-->
<!--                android:paddingRight="30dp" />-->

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/loopSwitch"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:layout_marginTop="30dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/loop"
                android:theme="@style/controlTheme" />

<!--            <androidx.appcompat.widget.SwitchCompat-->
<!--                android:id="@+id/enhancedSwitch"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="41dp"-->
<!--                android:layout_marginTop="30dp"-->
<!--                android:paddingLeft="30dp"-->
<!--                android:paddingRight="30dp"-->
<!--                android:text="@string/enhanced"-->
<!--                android:theme="@style/controlTheme" />-->

            <Button
                android:id="@+id/viewButton"
                style="@style/buttonTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/view_nws_image" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>